--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,9 @@
         "packages/database",
         "packages/database-ts",
         "packages/eslint-plugin-bot-whatsapp",
-        "packages/provider"
+        "packages/provider",
+        "packages/database-mongo",
+        "packages/database-mysql"
     ],
     "npmClient": "pnpm"
 }
