--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -10,7 +10,7 @@
     "type": "module",
     "scripts": {
         "build": "rimraf dist && rollup --config",
-        "test": " npx uvu -r tsm ./_test_ methods.test.ts",
+        "test": " npx uvu -r tsm ./_test_",
         "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./_test_ flowClass.test.ts"
     },
     "files": [
@@ -28,13 +28,27 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "devDependencies": {
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@rollup/plugin-commonjs": "^23.0.7",
+        "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
+        "@types/fluent-ffmpeg": "^2.1.24",
+        "@types/follow-redirects": "^1.14.4",
+        "@types/mime-types": "^2.1.4",
         "@types/node": "^20.11.0",
-        "kleur": "^4.1.5",
+        "@types/proxyquire": "^1.3.31",
+        "@types/sinon": "^17.0.3",
+        "fluent-ffmpeg": "^2.1.2",
+        "follow-redirects": "^1.15.4",
+        "picocolors": "^1.0.0",
+        "mime-types": "^2.1.35",
+        "proxyquire": "^2.1.3",
         "rimraf": "^3.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
+        "sinon": "^17.0.1",
         "tslib": "^2.6.2",
-        "tsm": "^2.3.0"
+        "tsm": "^2.3.0",
+        "sharp": "^0.30.7"
     }
 }
