--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,13 +22,13 @@
         "@types/sinon": "^17.0.3",
         "cross-spawn": "^7.0.3",
         "fs-extra": "^11.1.1",
-        "kleur": "^4.1.5",
         "prompts": "^2.4.2",
         "proxyquire": "^2.1.3",
         "rimraf": "^5.0.5",
         "rollup-plugin-typescript2": "^0.36.0",
         "sinon": "^17.0.1",
-        "uvu": "^0.5.6"
+        "uvu": "^0.5.6",
+        "picocolors": "^1.0.0"
     },
     "files": [
         "./starters/",
@@ -40,8 +40,5 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/codigoencasa/bot-whatsapp/tree/main/packages/cli"
-    },
-    "dependencies": {
-        "picocolors": "^1.0.0"
     }
 }
