--- a/packages/database-mongo/package.json
+++ b/packages/database-mongo/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "database-mongo",
+    "name": "@bot-whatsapp/database-mongo",
     "version": "0.1.0-alpha.0",
     "description": "Esto es el conector a mongo DB",
     "keywords": [],
