--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -29,6 +29,7 @@
     },
     "devDependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@microsoft/api-extractor": "^7.39.1",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -39,16 +40,18 @@
         "@types/node": "^20.11.0",
         "@types/proxyquire": "^1.3.31",
         "@types/sinon": "^17.0.3",
-        "fluent-ffmpeg": "^2.1.2",
         "follow-redirects": "^1.15.4",
-        "picocolors": "^1.0.0",
         "mime-types": "^2.1.35",
+        "picocolors": "^1.0.0",
         "proxyquire": "^2.1.3",
         "rimraf": "^3.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
+        "sharp": "^0.30.7",
         "sinon": "^17.0.1",
         "tslib": "^2.6.2",
-        "tsm": "^2.3.0",
-        "sharp": "^0.30.7"
+        "tsm": "^2.3.0"
+    },
+    "dependencies": {
+        "fluent-ffmpeg": "^2.1.2"
     }
 }
