--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,15 +4,13 @@
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "outDir": "./dist",
+        "rootDir": "./src",
         "declaration": true,
+        "declarationMap": true,
         "moduleResolution": "node",
-        "importHelpers": true
+        "importHelpers": true,
+        "types": ["node"]
     },
-    "files": [],
-    "include": [],
-    "references": [
-        {
-            "path": "./tsconfig.lib.json"
-        }
-    ]
+    "include": ["src/**/*.js", "src/**/*.ts"],
+    "exclude": ["**/*.spec.ts", "**/*.test.ts", "node_modules"]
 }
