--- a/packages/provider-twilio/package.json
+++ b/packages/provider-twilio/package.json
@@ -17,12 +17,17 @@
     },
     "scripts": {
         "build": "rimraf dist && rollup --config",
-        "test": " npx uvu -r tsm ./_test_ "
+        "test": " npx uvu -r tsm ./_test_",
+        "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./_test_ flowClass.test.ts"
     },
     "bugs": {
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "devDependencies": {
+        "@bot-whatsapp/bot": "workspace:*",
+        "@rollup/plugin-commonjs": "^23.0.7",
+        "@rollup/plugin-json": "^6.1.0",
+        "@rollup/plugin-node-resolve": "^15.2.3",
         "@types/body-parser": "^1.19.5",
         "@types/fluent-ffmpeg": "^2.1.24",
         "@types/follow-redirects": "^1.14.4",
@@ -33,10 +38,15 @@
         "@types/sinon": "^17.0.3",
         "@types/twilio": "^3.19.3",
         "proxyquire": "^2.1.3",
-        "sinon": "^17.0.1"
+        "rimraf": "^5.0.5",
+        "rollup-plugin-typescript2": "^0.36.0",
+        "sinon": "^17.0.1",
+        "twilio": "4.20.0"
     },
     "dependencies": {
-        "@bot-whatsapp/bot": "workspace:*",
-        "twilio": "4.20.0"
+        "body-parser": "^1.20.2",
+        "fluent-ffmpeg": "^2.1.2",
+        "mime-types": "^2.1.35",
+        "polka": "^0.5.2"
     }
 }
