refactor: continue bailey typeof

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,14 @@
-packages/docs/*
-packages/portal/*
-starters/apps/*
-packages/bot-ts/
-packages/bot/
-packages/cli/
-packages/create-bot-whatsapp/
+packages/docs/node_modules/
+packages/docs/dist/
+packages/portal/node_modules/
+packages/portal/dist/
+starters/apps/node_modules/
+starters/apps/dist/
+packages/bot-ts/node_modules/
+packages/bot-ts/dist/
+packages/bot/node_modules/
+packages/bot/dist/
+packages/cli/node_modules/
+packages/cli/dist/
+packages/create-bot-whatsapp/node_modules/
+packages/create-bot-whatsapp/dist/
