--- a/package.json
+++ b/package.json
@@ -58,12 +58,16 @@
     "devDependencies": {
         "@commitlint/config-conventional": "^18.4.4",
         "@octokit/core": "^4.2.4",
+        "@typescript-eslint/eslint-plugin": "^6.19.0",
+        "@typescript-eslint/parser": "^6.19.0",
         "c8": "^7.14.0",
         "commitlint": "18.4.4",
         "eslint": "^8.52.0",
+        "eslint-plugin-import": "^2.29.1",
         "fs-extra": "^11.1.1",
         "git-cz": "^4.9.0",
         "husky": "^8.0.3",
+        "install": "^0.13.0",
         "lerna": "^8.0.2",
         "only-allow": "^1.2.1",
         "prettier": "^2.8.8",
