--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,12 @@
         "es2021": true,
         "node": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:import/errors",
+        "plugin:import/warnings"
+    ],
     "overrides": [
         {
             "files": ["packages/**/*.js"],
@@ -18,7 +23,28 @@
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "parser": "@typescript-eslint/parser"
     },
-    "ignorePatterns": ["node_modules/", "starters/", "__test__", "base-**"]
+    "ignorePatterns": ["node_modules/", "starters/", "__test__", "base-**", "_test_", "*.js"],
+    "plugins": ["@typescript-eslint", "import"],
+    "rules": {
+        "import/order": [
+            "error",
+            {
+                "groups": [["builtin", "external"], "internal", ["parent", "sibling", "index"]],
+                "newlines-between": "always",
+                "alphabetize": {
+                    "order": "asc",
+                    "caseInsensitive": true
+                }
+            }
+        ],
+        "@typescript-eslint/no-explicit-any": 0,
+        "no-useless-escape": 0,
+        "@typescript-eslint/ban-types": 0,
+        "no-prototype-builtins": 0,
+        "@typescript-eslint/no-var-requires": 0,
+        "import/no-unresolved": 0
+    }
 }
