refactor: ts, test  slint pluging🌟🌟

--- a/packages/eslint-plugin-bot-whatsapp-ts/package.json
+++ b/packages/eslint-plugin-bot-whatsapp-ts/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "@bot-whatsapp/database-postgres",
+    "name": "eslint-plugin-bot-whatsapp-ts",
     "version": "0.1.0-alpha.0",
     "description": "> TODO: description",
     "author": "vicente1992 <vic_ortiz20@hotmail.es>",
-    "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
+    "homepage": "https://github.com/vicente1992/bot-whatsapp#readme",
     "license": "ISC",
     "main": "dist/index.cjs",
     "types": "dist/index.d.ts",
@@ -17,7 +17,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/codigoencasa/bot-whatsapp.git"
+        "url": "git+https://github.com/vicente1992/bot-whatsapp.git"
     },
     "scripts": {
         "build": "rimraf dist && rollup --config",
@@ -25,17 +25,14 @@
         "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./__tests__ .test.ts"
     },
     "bugs": {
-        "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
-    },
-    "dependencies": {
-        "pg": "^8.11.2"
+        "url": "https://github.com/vicente1992/bot-whatsapp/issues"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
         "@types/node": "^20.11.0",
-        "@types/pg": "^8.10.9",
+        "@types/sinon": "^17.0.3",
         "kleur": "^4.1.5",
         "rimraf": "^3.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
