--- a/packages/contexts-ts/package.json
+++ b/packages/contexts-ts/package.json
@@ -35,6 +35,10 @@
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
         "@types/node": "^20.11.0",
-        "rollup-plugin-typescript2": "^0.36.0"
+        "@types/proxyquire": "^1.3.31",
+        "@types/sinon": "^17.0.3",
+        "proxyquire": "^2.1.3",
+        "rollup-plugin-typescript2": "^0.36.0",
+        "sinon": "^17.0.1"
     }
 }
