--- a/packages/eslint-plugin-bot-whatsapp/package.json
+++ b/packages/eslint-plugin-bot-whatsapp/package.json
@@ -1,7 +1,7 @@
 {
     "name": "eslint-plugin-bot-whatsapp",
     "version": "0.1.0-alpha.0",
-    "description": "",
+    "description": "> TODO: description",
     "main": "./lib/eslint-plugin-bot-whatsapp.cjs",
     "files": [
         "./lib/*"
@@ -9,6 +9,18 @@
     "scripts": {
         "build": "rimraf ./lib && rollup --config ./rollup.config.js"
     },
-    "author": "",
-    "license": "ISC"
+    "author": "vicente1992 <vic_ortiz20@hotmail.es>",
+    "license": "ISC",
+    "homepage": "https://github.com/vicente1992/bot-whatsapp#readme",
+    "directories": {
+        "src": "src",
+        "test": "__tests__"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/vicente1992/bot-whatsapp.git"
+    },
+    "bugs": {
+        "url": "https://github.com/vicente1992/bot-whatsapp/issues"
+    }
 }
