--- a/packages/provider-web-whatsapp/package.json
+++ b/packages/provider-web-whatsapp/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@bot-whatsapp/baileys",
-    "version": "0.1.0-alpha.13",
+    "name": "@bot-whatsapp/web-whatsapp",
+    "version": "0.1.0-alpha.0",
     "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
     "keywords": [],
     "author": "Leifer Mendez <leifer33@gmail.com>",
@@ -12,13 +12,13 @@
         "build": "rimraf dist && rollup --config",
         "test": "npx uvu -r tsm ./_test_"
     },
-    "files": [
-        "./dist/"
-    ],
     "directories": {
-        "lib": "lib",
+        "lib": "dist",
         "test": "__tests__"
     },
+    "files": [
+        "dist"
+    ],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/codigoencasa/bot-whatsapp.git"
@@ -29,7 +29,6 @@
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
     "devDependencies": {
         "@bot-whatsapp/bot": "workspace:*",
-        "@hapi/boom": "^10.0.1",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -41,12 +40,9 @@
         "pino": "^7.11.0",
         "qr-image": "^3.2.0",
         "rimraf": "^5.0.5",
-        "rollup-plugin-typescript2": "^0.36.0",
-        "wa-sticker-formatter": "^4.4.4"
+        "rollup-plugin-typescript2": "^0.36.0"
     },
     "dependencies": {
-        "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "@whiskeysockets/baileys": "^6.5.0",
-        "fluent-ffmpeg": "^2.1.2"
+        "whatsapp-web.js": "^1.23.0"
     }
 }
