--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -16,34 +16,52 @@
         "./dist/"
     ],
     "dependencies": {
+        "@bot-whatsapp/baileys": "workspace:*",
         "@bot-whatsapp/bot": "workspace:*",
-        "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "axios": "^1.6.5",
-        "body-parser": "^1.20.2",
-        "combine-image": "^1.0.3",
-        "fluent-ffmpeg": "^2.1.2",
-        "follow-redirects": "^1.15.4",
-        "mime-types": "^2.1.35",
-        "polka": "^0.5.2",
-        "qr-image": "^3.2.0",
-        "queue-promise": "^2.2.1",
-        "rimraf": "^3.0.2",
-        "sharp": "^0.30.7"
+        "@bot-whatsapp/twilio": "workspace:*"
     },
     "exports": {
-        "./mock": "./lib/mock/index.cjs",
-        "./twilio": "./lib/twilio/index.cjs",
-        "./web-whatsapp": "./lib/web-whatsapp/index.cjs",
-        "./venom": "./lib/venom/index.cjs",
-        "./baileys": "./lib/baileys/index.cjs",
-        "./meta": "./lib/meta/index.cjs",
-        "./wppconnect": "./lib/wppconnect/index.cjs"
+        "./mock": {
+            "import": {
+                "default": "./dist/memory.mjs"
+            },
+            "require": {
+                "default": "./dist/memory.cjs"
+            }
+        },
+        "./memory": {
+            "import": {
+                "default": "./dist/memory.mjs"
+            },
+            "require": {
+                "default": "./dist/memory.cjs"
+            }
+        },
+        "./baileys": {
+            "import": {
+                "default": "./dist/baileys.mjs"
+            },
+            "require": {
+                "default": "./dist/baileys.cjs"
+            }
+        },
+        "./twilio": {
+            "import": {
+                "default": "./dist/twilio.mjs"
+            },
+            "require": {
+                "default": "./dist/twilio.cjs"
+            }
+        }
     },
     "repository": {
         "type": "git",
         "url": "https://github.com/codigoencasa/bot-whatsapp/tree/main/packages/provider"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^23.0.7",
+        "@rollup/plugin-json": "^6.1.0",
+        "@rollup/plugin-node-resolve": "^15.2.3",
         "@types/body-parser": "^1.19.5",
         "@types/fluent-ffmpeg": "^2.1.24",
         "@types/follow-redirects": "^1.14.4",
@@ -53,6 +71,8 @@
         "@types/proxyquire": "^1.3.31",
         "@types/sinon": "^17.0.3",
         "proxyquire": "^2.1.3",
+        "rimraf": "^5.0.5",
+        "rollup-plugin-typescript2": "^0.36.0",
         "sinon": "^17.0.1"
     }
 }
