--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/bot",
-    "version": "0.1.0-alpha.17",
+    "version": "0.1.0-alpha.18",
     "description": "core typescript",
     "author": "Leifer Mendez <leifer33@gmail.com>",
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
@@ -29,29 +29,29 @@
     },
     "devDependencies": {
         "@microsoft/api-extractor": "^7.39.1",
-        "@rollup/plugin-commonjs": "^23.0.7",
+        "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
         "@types/fluent-ffmpeg": "^2.1.24",
         "@types/follow-redirects": "^1.14.4",
         "@types/mime-types": "^2.1.4",
-        "@types/node": "^20.11.0",
+        "@types/node": "^20.11.5",
         "@types/proxyquire": "^1.3.31",
         "@types/sinon": "^17.0.3",
         "proxyquire": "^2.1.3",
-        "rimraf": "^3.0.2",
+        "rimraf": "^5.0.5",
         "rollup-plugin-typescript2": "^0.36.0",
         "sinon": "^17.0.1",
         "tslib": "^2.6.2",
         "tsm": "^2.3.0"
     },
     "dependencies": {
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "fluent-ffmpeg": "^2.1.2",
-        "picocolors": "^1.0.0",
-        "follow-redirects": "^1.15.4",
+        "follow-redirects": "^1.15.5",
         "mime-types": "^2.1.35",
-        "sharp": "^0.30.7",
-        "@ffmpeg-installer/ffmpeg": "^1.1.0"
+        "picocolors": "^1.0.0",
+        "sharp": "^0.33.2"
     }
 }
