--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/cli",
-    "version": "0.1.0-alpha.0",
+    "version": "0.1.0-alpha.18",
     "description": "",
     "main": "dist/index.cjs",
     "types": "dist/index.d.ts",
@@ -22,13 +22,13 @@
         "@types/sinon": "^17.0.3",
         "cross-spawn": "^7.0.3",
         "fs-extra": "^11.1.1",
+        "picocolors": "^1.0.0",
         "prompts": "^2.4.2",
         "proxyquire": "^2.1.3",
         "rimraf": "^5.0.5",
         "rollup-plugin-typescript2": "^0.36.0",
         "sinon": "^17.0.1",
-        "uvu": "^0.5.6",
-        "picocolors": "^1.0.0"
+        "uvu": "^0.5.6"
     },
     "files": [
         "./starters/",
