refactor: before merge

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Bot de wahtsapp open source para MVP o pequeños negocios",
     "main": "app.js",
     "private": true,
+    "type": "module",
     "scripts": {
         "commit": "git-cz",
         "cli:rollup": "rollup --config ./packages/cli/rollup.config.js ",
@@ -23,7 +24,7 @@
         "build:portal-web": "cd ./packages/portal/ && pnpm run build.types && pnpm run build.client && pnpm run build.server && pnpm run lint --fix",
         "build:full": "pnpm run build:portal-web && pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run eslint-plugin:rollup && pnpm run portal:rollup",
         "build": "pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run portal:rollup && pnpm run eslint-plugin:rollup",
-        "copy.lib": "node ./scripts/move.js",
+        "copy.lib": "tsm ./scripts/move.ts",
         "test.unit": "node ./node_modules/uvu/bin.js packages test -i bot-ts -i bot -i cli -i create-bot-whatsapp -i provider-twilio -i provider",
         "test.e2e": "node ./node_modules/uvu/bin.js __test__ ",
         "test.coverage": "node ./node_modules/c8/bin/c8.js npm run test.unit",
@@ -58,6 +59,7 @@
     "devDependencies": {
         "@commitlint/config-conventional": "^18.4.4",
         "@octokit/core": "^4.2.4",
+        "@types/fs-extra": "^11.0.4",
         "@typescript-eslint/eslint-plugin": "^6.19.0",
         "@typescript-eslint/parser": "^6.19.0",
         "c8": "^7.14.0",
@@ -77,6 +79,7 @@
         "semver": "^7.5.4",
         "standard-version": "^9.5.0",
         "tslib": "^2.6.2",
+        "tsm": "^2.3.0",
         "uvu": "^0.5.6"
     },
     "packageManager": "pnpm@8.6.12",
