--- a/packages/provider-venom/package.json
+++ b/packages/provider-venom/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@bot-whatsapp/venom",
+    "name": "@bot-whatsapp/provider-venom",
     "version": "0.1.0-alpha.19",
     "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
     "keywords": [],
