--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -20,9 +20,9 @@
         "test": "__tests__"
     },
     "dependencies": {
-        "@bot-whatsapp/bot": "workspace:*",
+        "@bot-whatsapp/bot": "0.1.1-alpha.0",
         "@bot-whatsapp/provider-baileys": "workspace:*",
-        "@bot-whatsapp/provider-twilio": "workspace:*"
+        "@bot-whatsapp/provider-twilio": "0.1.1-alpha.0"
     },
     "exports": {
         ".": {
@@ -71,5 +71,6 @@
         "rimraf": "^5.0.5",
         "rollup-plugin-typescript2": "^0.36.0",
         "sinon": "^17.0.1"
-    }
+    },
+    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
 }
