--- a/packages/create-bot-whatsapp/package.json
+++ b/packages/create-bot-whatsapp/package.json
@@ -16,7 +16,7 @@
     ],
     "bin": "./bin/create.cjs",
     "dependencies": {
-        "@bot-whatsapp/cli": "workspace:*"
+        "@bot-whatsapp/cli": "0.1.1-alpha.0"
     },
     "repository": {
         "type": "git",
@@ -29,5 +29,6 @@
         "@types/node": "^20.11.0",
         "rimraf": "^5.0.5",
         "rollup-plugin-typescript2": "^0.36.0"
-    }
+    },
+    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
 }
