--- a/packages/database-postgres/package.json
+++ b/packages/database-postgres/package.json
@@ -42,5 +42,6 @@
         "sinon": "^17.0.1",
         "tslib": "^2.6.2",
         "tsm": "^2.3.0"
-    }
+    },
+    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
 }
