--- a/packages/provider-twilio/package.json
+++ b/packages/provider-twilio/package.json
@@ -27,7 +27,7 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "devDependencies": {
-        "@bot-whatsapp/bot": "workspace:*",
+        "@bot-whatsapp/bot": "0.1.1-alpha.0",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -51,5 +51,6 @@
         "fluent-ffmpeg": "^2.1.2",
         "mime-types": "^2.1.35",
         "polka": "^0.5.2"
-    }
+    },
+    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
 }
