--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/bot",
-    "version": "0.1.1-alpha.0",
+    "version": "0.1.1-alpha.0+4cbee15",
     "description": "core typescript",
     "author": "Leifer Mendez <leifer33@gmail.com>",
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
@@ -54,5 +54,5 @@
         "picocolors": "^1.0.0",
         "sharp": "^0.33.2"
     },
-    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
+    "gitHead": "4cbee15085bc6664a85f02311d7c0b98377af1fa"
 }
