--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/cli",
-    "version": "0.1.1-alpha.0",
+    "version": "0.1.1-alpha.0+4cbee15",
     "description": "",
     "main": "dist/index.cjs",
     "types": "dist/index.d.ts",
@@ -41,5 +41,5 @@
         "type": "git",
         "url": "https://github.com/codigoencasa/bot-whatsapp/tree/main/packages/cli"
     },
-    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
+    "gitHead": "4cbee15085bc6664a85f02311d7c0b98377af1fa"
 }
