--- a/packages/create-bot-whatsapp/package.json
+++ b/packages/create-bot-whatsapp/package.json
@@ -1,6 +1,6 @@
 {
     "name": "create-bot-whatsapp",
-    "version": "0.1.1-alpha.0",
+    "version": "0.1.1-alpha.0+4cbee15",
     "description": "",
     "license": "ISC",
     "main": "dist/index.cjs",
@@ -16,7 +16,7 @@
     ],
     "bin": "./bin/create.cjs",
     "dependencies": {
-        "@bot-whatsapp/cli": "0.1.1-alpha.0"
+        "@bot-whatsapp/cli": "^0.1.1-alpha.0+4cbee15"
     },
     "repository": {
         "type": "git",
@@ -30,5 +30,5 @@
         "rimraf": "^5.0.5",
         "rollup-plugin-typescript2": "^0.36.0"
     },
-    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
+    "gitHead": "4cbee15085bc6664a85f02311d7c0b98377af1fa"
 }
