--- a/packages/provider-meta/package.json
+++ b/packages/provider-meta/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/provider-meta",
-    "version": "0.1.1-alpha.0",
+    "version": "0.1.1-alpha.0+4cbee15",
     "description": "> TODO: description",
     "author": "vicente1992 <vic_ortiz20@hotmail.es>",
     "homepage": "https://github.com/vicente1992/bot-whatsapp#readme",
@@ -44,5 +44,5 @@
         "tslib": "^2.6.2",
         "tsm": "^2.3.0"
     },
-    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
+    "gitHead": "4cbee15085bc6664a85f02311d7c0b98377af1fa"
 }
