--- a/packages/provider-twilio/package.json
+++ b/packages/provider-twilio/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/provider-twilio",
-    "version": "0.1.1-alpha.0",
+    "version": "0.1.1-alpha.0+4cbee15",
     "description": "> TODO: description",
     "author": "Leifer Mendez <leifer33@gmail.com>",
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
@@ -27,7 +27,7 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "devDependencies": {
-        "@bot-whatsapp/bot": "0.1.1-alpha.0",
+        "@bot-whatsapp/bot": "^0.1.1-alpha.0+4cbee15",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -52,5 +52,5 @@
         "mime-types": "^2.1.35",
         "polka": "^0.5.2"
     },
-    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
+    "gitHead": "4cbee15085bc6664a85f02311d7c0b98377af1fa"
 }
