--- a/packages/provider-web-whatsapp/package.json
+++ b/packages/provider-web-whatsapp/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/provider-web-whatsapp",
-    "version": "0.1.1-alpha.0",
+    "version": "0.1.1-alpha.0+4cbee15",
     "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
     "keywords": [],
     "author": "Leifer Mendez <leifer33@gmail.com>",
@@ -28,7 +28,7 @@
     },
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
     "devDependencies": {
-        "@bot-whatsapp/bot": "0.1.1-alpha.0",
+        "@bot-whatsapp/bot": "^0.1.1-alpha.0+4cbee15",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -45,5 +45,5 @@
     "dependencies": {
         "whatsapp-web.js": "^1.23.0"
     },
-    "gitHead": "3d3cada7e7c9b9a579bb8c94e5b68dfb6fa3878f"
+    "gitHead": "4cbee15085bc6664a85f02311d7c0b98377af1fa"
 }
