--- a/packages/create-bot-whatsapp/package.json
+++ b/packages/create-bot-whatsapp/package.json
@@ -1,6 +1,6 @@
 {
     "name": "create-bot-whatsapp",
-    "version": "0.0.141-alpha.0",
+    "version": "0.1.37",
     "description": "",
     "main": "./lib/bundle.create-bot-whatsapp.cjs",
     "files": [
