--- a/packages/eslint-plugin-bot-whatsapp/package.json
+++ b/packages/eslint-plugin-bot-whatsapp/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eslint-plugin-bot-whatsapp",
-    "version": "0.0.4-alpha.0",
+    "version": "0.1.37",
     "description": "",
     "main": "./lib/eslint-plugin-bot-whatsapp.cjs",
     "files": [
