--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "lint:fix": "eslint --fix ./packages",
         "build:portal-web": "cd ./packages/portal/ && pnpm run build.types && pnpm run build.client && pnpm run build.server && pnpm run lint --fix",
         "build:full": "pnpm run build:portal-web && pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run eslint-plugin:rollup && pnpm run portal:rollup",
-        "build": "pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run portal:rollup && pnpm run eslint-plugin:rollup",
+        "build": "npx lerna run build",
         "copy.lib": "tsm ./scripts/move.ts",
         "test.unit": "node ./node_modules/uvu/bin.js packages test -i bot-ts -i bot -i cli -i create-bot-whatsapp -i provider-twilio -i provider -i contexts -i database -i database-mongo -i database-mysql -i database-ts -i database-json -i database-postgres",
         "test.e2e": "node ./node_modules/uvu/bin.js __test__ ",
