--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "format:write": "prettier --write ./packages",
         "fmt.staged": "pretty-quick --staged",
         "lint:check": "eslint .",
+        "test:coverage": "lerna run test:coverage",
         "lint:fix": "eslint --fix ./packages",
         "build:portal-web": "cd ./packages/portal/ && pnpm run build.types && pnpm run build.client && pnpm run build.server && pnpm run lint --fix",
         "build:full": "pnpm run build:portal-web && pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run eslint-plugin:rollup && pnpm run portal:rollup",
@@ -26,7 +27,7 @@
         "copy.lib": "tsm ./scripts/move.ts",
         "test.unit": "node ./node_modules/uvu/bin.js packages test -i bot-ts -i bot -i cli -i create-bot-whatsapp -i provider-twilio -i provider -i contexts -i database -i database-mongo -i database-mysql -i database-ts -i database-json -i database-postgres",
         "test.e2e": "node ./node_modules/uvu/bin.js __test__ ",
-        "test.coverage": "node ./node_modules/c8/bin/c8.js npm run test.unit",
+        "test.coverage": "npx c8 npm run test.unit",
         "test": "npm run test.coverage",
         "cli": "node ./packages/cli/bin/cli.cjs",
         "create": "node ./packages/create-bot-whatsapp/bin/create.js",
@@ -61,7 +62,7 @@
         "@types/fs-extra": "^11.0.4",
         "@typescript-eslint/eslint-plugin": "^6.19.0",
         "@typescript-eslint/parser": "^6.19.0",
-        "c8": "^7.14.0",
+        "c8": "^9.1.0",
         "commitlint": "18.4.4",
         "eslint": "^8.52.0",
         "eslint-plugin-import": "^2.29.1",
