--- a/packages/provider-meta/package.json
+++ b/packages/provider-meta/package.json
@@ -29,7 +29,6 @@
     },
     "dependencies": {
         "@types/axios": "^0.14.0",
-        "axios": "^1.6.5",
         "body-parser": "^1.20.2",
         "crypto": "^1.0.1",
         "form-data": "^4.0.0",
@@ -45,11 +44,13 @@
         "@types/node": "^20.11.0",
         "@types/polka": "^0.5.7",
         "@types/sinon": "^17.0.3",
+        "axios": "^1.6.5",
         "kleur": "^4.1.5",
         "proxyquire": "^2.1.3",
         "rimraf": "^3.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
         "sinon": "^17.0.1",
+        "supertest": "^6.3.4",
         "tslib": "^2.6.2",
         "tsm": "^2.3.0"
     }
