--- a/packages/provider-wppconnect/tsconfig.json
+++ b/packages/provider-wppconnect/tsconfig.json
@@ -10,8 +10,17 @@
         "moduleResolution": "node",
         "importHelpers": true,
         "target": "es2021",
-        "types": ["node"]
+        "types": [
+            "node"
+        ]
     },
-    "include": ["src/**/*.js", "src/**/*.ts"],
-    "exclude": ["**/*.spec.ts", "**/*.test.ts", "node_modules"]
+    "include": [
+        "src/**/*.js",
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "**/*.spec.ts",
+        "**/*.test.ts",
+        "node_modules"
+    ]
 }
