--- a/packages/database-mysql/package.json
+++ b/packages/database-mysql/package.json
@@ -22,7 +22,8 @@
     "scripts": {
         "build": "rimraf dist && rollup --config",
         "test": " npx uvu -r tsm ./__tests__ .test.ts",
-        "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./__tests__ .test.ts"
+        "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./__tests__ .test.ts",
+        "test:coverage": "npx c8  npm run test"
     },
     "bugs": {
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
@@ -36,9 +37,11 @@
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
         "@types/node": "^20.11.0",
+        "@types/sinon": "^17.0.3",
         "kleur": "^4.1.5",
         "rimraf": "^3.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
+        "sinon": "^17.0.1",
         "tslib": "^2.6.2",
         "tsm": "^2.3.0"
     },
