--- a/packages/database-postgres/package.json
+++ b/packages/database-postgres/package.json
@@ -22,7 +22,8 @@
     "scripts": {
         "build": "rimraf dist && rollup --config",
         "test": " npx uvu -r tsm ./__tests__ .test.ts",
-        "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./__tests__ .test.ts"
+        "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./__tests__ .test.ts",
+        "test:coverage": "npx c8  npm run test"
     },
     "bugs": {
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
