--- a/nx.json
+++ b/nx.json
@@ -1,19 +1,25 @@
 {
-    "tasksRunnerOptions": {
-      "default": {
-        "runner": "nx/tasks-runners/default",
-        "options": {
-          "cacheableOperations": [
-            "test:coverage"
-          ]
-        }
-      }
+    "$schema": "node_modules/nx/schemas/nx-schema.json",
+    "namedInputs": {
+        "default": ["{projectRoot}/**/*"],
+        "prod": ["!{projectRoot}/**/*.spec.tsx"],
+        "production": ["default"]
     },
     "targetDefaults": {
-      "test:coverage": {
-        "outputs": [
-          "{projectRoot}/coverage"
-        ]
-      }
+        "build": {
+            "inputs": ["prod", "^prod"],
+            "dependsOn": ["^build"],
+            "cache": true
+        },
+        "test": {
+            "inputs": ["default", "^prod"],
+            "cache": true
+        },
+        "dev": {
+            "dependsOn": ["^build"]
+        },
+        "test:coverage": {
+            "outputs": ["{projectRoot}/coverage"]
+        }
     }
-  }
+}
