--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -10,7 +10,7 @@
     "type": "module",
     "scripts": {
         "build": "rimraf dist && rollup --config",
-        "test": " npx uvu -r tsm ./__tests__ cleanImage.test.ts",
+        "test": " npx uvu -r tsm ./__tests__ ",
         "test:coverage": "npx c8  npm run test",
         "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./_test_ flowClass.test.ts"
     },
