--- a/packages/contexts-dialogflow/package.json
+++ b/packages/contexts-dialogflow/package.json
@@ -11,6 +11,7 @@
     "scripts": {
         "build": "rimraf dist && rollup --config",
         "test": " npx uvu -r tsm ./__tests__ .test.ts",
+        "test:coverage": "npx c8 npm run test",
         "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./__tests__ .test.ts"
     },
     "files": [
