--- a/packages/provider-venom/package.json
+++ b/packages/provider-venom/package.json
@@ -13,7 +13,8 @@
     ],
     "scripts": {
         "build": "rimraf dist && rollup --config",
-        "test": "npx uvu -r tsm ./__tests__"
+        "test": "npx uvu -r tsm ./__tests__",
+        "test:coverage": "npx c8 npm run test"
     },
     "directories": {
         "lib": "dist",
