--- a/lerna.json
+++ b/lerna.json
@@ -1,26 +1,26 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.1.1-alpha.0",
-  "packages": [
-    "packages/bot",
-    "packages/cli",
-    "packages/create-bot-whatsapp",
-    "packages/provider",
-    "packages/database-mongo",
-    "packages/database-mysql",
-    "packages/database-json",
-    "packages/database-postgres",
-    "packages/eslint-plugin-bot-whatsapp-ts",
-    "packages/provider-meta",
-    "packages/provider",
-    "packages/provider-bailey",
-    "packages/provider-baileys",
-    "packages/provider-twilio",
-    "packages/provider-web-whatsapp",
-    "packages/provider-wppconnect",
-    "packages/provider-venom",
-    "packages/contexts-dialogflow",
-    "packages/contexts"
-  ],
-  "npmClient": "pnpm"
+    "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+    "version": "0.1.1-alpha.0",
+    "packages": [
+        "packages/bot",
+        "packages/cli",
+        "packages/create-bot-whatsapp",
+        "packages/provider",
+        "packages/database-mongo",
+        "packages/database-mysql",
+        "packages/database-json",
+        "packages/database-postgres",
+        "packages/eslint-plugin-bot-whatsapp-ts",
+        "packages/provider-meta",
+        // "packages/provider",
+        "packages/provider-bailey",
+        "packages/provider-baileys",
+        "packages/provider-twilio",
+        "packages/provider-web-whatsapp",
+        "packages/provider-wppconnect",
+        "packages/provider-venom",
+        "packages/contexts-dialogflow",
+        "packages/contexts"
+    ],
+    "npmClient": "pnpm"
 }
