--- a/package.json
+++ b/package.json
@@ -1,93 +1,114 @@
 {
-    "name": "@bot-whatsapp/root",
-    "version": "0.1.34",
-    "description": "Bot de wahtsapp open source para MVP o pequeños negocios",
-    "main": "app.js",
-    "private": true,
-    "scripts": {
-        "commit": "git-cz",
-        "cli:rollup": "rollup --config ./packages/cli/rollup.config.js ",
-        "create-bot:rollup": "rollup --config ./packages/create-bot-whatsapp/rollup.config.js ",
-        "bot:rollup": "rollup --config ./packages/bot/rollup.config.js",
-        "provider:rollup": "rollup --config ./packages/provider/rollup-provider.config.js ",
-        "contexts:rollup": "rollup --config ./packages/contexts/rollup-contexts.config.js",
-        "database:rollup": "rollup --config ./packages/database/rollup-database.config.js",
-        "eslint-plugin:rollup": "rollup --config ./packages/eslint-plugin-bot-whatsapp/rollup.config.js",
-        "create-bot-whatsapp:rollup": "rollup --config ./packages/create-bot-whatsapp/rollup.config.js",
-        "portal:rollup": "rollup --config ./packages/portal/rollup.config.js",
-        "format:check": "prettier --check ./packages",
-        "format:write": "prettier --write ./packages",
-        "fmt.staged": "pretty-quick --staged",
-        "lint:check": "eslint .",
-        "test:coverage": "lerna run test:coverage",
-        "lint:fix": "eslint --fix ./packages",
-        "build:portal-web": "cd ./packages/portal/ && pnpm run build.types && pnpm run build.client && pnpm run build.server && pnpm run lint --fix",
-        "build:full": "pnpm run build:portal-web && pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run eslint-plugin:rollup && pnpm run portal:rollup",
-        "build": "npx lerna run build",
-        "copy.lib": "tsm ./scripts/move.ts",
-        "test.unit": "node ./node_modules/uvu/bin.js packages test -i bot-ts -i bot -i cli -i create-bot-whatsapp -i provider-twilio -i provider -i contexts -i database -i database-mongo -i database-mysql -i database-ts -i database-json -i database-postgres",
-        "test.e2e": "node ./node_modules/uvu/bin.js __test__ ",
-        "test.coverage": "npx c8 npm run test.unit",
-        "test": "npm run test.coverage",
-        "cli": "node ./packages/cli/bin/cli.cjs",
-        "create": "node ./packages/create-bot-whatsapp/bin/create.js",
-        "dev:debug": "node --inspect ./example-app/app.js",
-        "dev": "node ./example-app/app.js",
-        "prepare": "npx husky install",
-        "preinstall": "npx only-allow pnpm",
-        "release": "standard-version -- --prerelease --global"
+  "name": "@bot-whatsapp/root",
+  "version": "0.1.34",
+  "description": "Bot de wahtsapp open source para MVP o pequeños negocios",
+  "main": "app.js",
+  "private": true,
+  "scripts": {
+    "clean":"npx lerna clean --y",
+    "commit": "git-cz",
+    "cli:rollup": "rollup --config ./packages/cli/rollup.config.js ",
+    "create-bot:rollup": "rollup --config ./packages/create-bot-whatsapp/rollup.config.js ",
+    "bot:rollup": "rollup --config ./packages/bot/rollup.config.js",
+    "provider:rollup": "rollup --config ./packages/provider/rollup-provider.config.js ",
+    "contexts:rollup": "rollup --config ./packages/contexts/rollup-contexts.config.js",
+    "database:rollup": "rollup --config ./packages/database/rollup-database.config.js",
+    "eslint-plugin:rollup": "rollup --config ./packages/eslint-plugin-bot-whatsapp/rollup.config.js",
+    "create-bot-whatsapp:rollup": "rollup --config ./packages/create-bot-whatsapp/rollup.config.js",
+    "portal:rollup": "rollup --config ./packages/portal/rollup.config.js",
+    "format:check": "prettier --check ./packages",
+    "format:write": "prettier --write ./packages",
+    "fmt.staged": "pretty-quick --staged",
+    "lint:check": "eslint .",
+    "test:coverage": "lerna run test:coverage",
+    "lint:fix": "eslint --fix ./packages",
+    "build:portal-web": "cd ./packages/portal/ && pnpm run build.types && pnpm run build.client && pnpm run build.server && pnpm run lint --fix",
+    "build:full": "pnpm run build:portal-web && pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run eslint-plugin:rollup && pnpm run portal:rollup",
+    "build": "npx lerna run build --concurrency=1",
+    "copy.lib": "tsm ./scripts/move.ts",
+    "test.unit": "node ./node_modules/uvu/bin.js packages test -i bot-ts -i bot -i cli -i create-bot-whatsapp -i provider-twilio -i provider -i contexts -i database -i database-mongo -i database-mysql -i database-ts -i database-json -i database-postgres",
+    "test.e2e": "node ./node_modules/uvu/bin.js __test__ ",
+    "test.coverage": "npx c8 npm run test.unit",
+    "test": "npm run test.coverage",
+    "cli": "node ./packages/cli/bin/cli.cjs",
+    "create": "node ./packages/create-bot-whatsapp/bin/create.js",
+    "dev:debug": "node --inspect ./example-app/app.js",
+    "dev": "node ./example-app/app.js",
+    "prepare": "npx husky install",
+    "preinstall": "npx only-allow pnpm",
+    "release": "standard-version -- --prerelease --global"
+  },
+  "keywords": [
+    "whatsapp",
+    "bot-whatsapp",
+    "node-bot-whatsapp"
+  ],
+  "contributors": [
+    {
+      "email": "leifer33@gmail.com",
+      "name": "Leifer Mendez",
+      "url": "https://leifermendez.github.io"
     },
-    "keywords": [
-        "whatsapp",
-        "bot-whatsapp",
-        "node-bot-whatsapp"
-    ],
-    "contributors": [
-        {
-            "email": "leifer33@gmail.com",
-            "name": "Leifer Mendez",
-            "url": "https://leifermendez.github.io"
-        },
-        {
-            "name": "aurik3",
-            "email": "aurik3@aurik3.com",
-            "url": "https://github.com/aurik3"
-        }
-    ],
-    "repository": "https://github.com/leifermendez/bot-whatsapp",
-    "license": "ISC",
-    "devDependencies": {
-        "@commitlint/config-conventional": "^18.4.4",
-        "@octokit/core": "^4.2.4",
-        "@types/fs-extra": "^11.0.4",
-        "@typescript-eslint/eslint-plugin": "^6.19.0",
-        "@typescript-eslint/parser": "^6.19.0",
-        "c8": "^9.1.0",
-        "commitlint": "18.4.4",
-        "eslint": "^8.52.0",
-        "eslint-plugin-import": "^2.29.1",
-        "fs-extra": "^11.1.1",
-        "git-cz": "^4.9.0",
-        "husky": "^8.0.3",
-        "install": "^0.13.0",
-        "lerna": "^8.0.2",
-        "nx": "^17.2.8",
-        "only-allow": "^1.2.1",
-        "prettier": "^2.8.8",
-        "pretty-quick": "^3.1.3",
-        "rollup": "^4.9.3",
-        "semver": "^7.5.4",
-        "standard-version": "^9.5.0",
-        "tslib": "^2.6.2",
-        "tsm": "^2.3.0",
-        "uvu": "^0.5.6"
-    },
-    "packageManager": "pnpm@8.6.12",
-    "engines": {
-        "node": ">=18",
-        "npm": "please-use-pnpm",
-        "yarn": "please-use-pnpm",
-        "pnpm": ">=8.6.12"
-    },
-    "author": "Leifer Mendez <leifer.contacto@gmail.com>"
+    {
+      "name": "aurik3",
+      "email": "aurik3@aurik3.com",
+      "url": "https://github.com/aurik3"
+    }
+  ],
+  "repository": "https://github.com/leifermendez/bot-whatsapp",
+  "license": "ISC",
+  "workspaces":    [
+    "packages/bot",
+    "packages/cli",
+    "packages/create-bot-whatsapp",
+    "packages/provider",
+    "packages/database-mongo",
+    "packages/database-mysql",
+    "packages/database-json",
+    "packages/database-postgres",
+    "packages/eslint-plugin-bot-whatsapp-ts",
+    "packages/provider-meta",
+    "packages/provider-bailey",
+    "packages/provider-baileys",
+    "packages/provider-twilio",
+    "packages/provider-web-whatsapp",
+    "packages/provider-wppconnect",
+    "packages/provider-venom",
+    "packages/contexts-dialogflow",
+    "packages/contexts"
+],
+  "devDependencies": {
+    "@commitlint/config-conventional": "^18.4.4",
+    "@octokit/core": "^4.2.4",
+    "@types/fs-extra": "^11.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "c8": "^9.1.0",
+    "commitlint": "18.4.4",
+    "eslint": "^8.52.0",
+    "eslint-plugin-import": "^2.29.1",
+    "fs-extra": "^11.1.1",
+    "git-cz": "^4.9.0",
+    "husky": "^8.0.3",
+    "install": "^0.13.0",
+    "lerna": "^8.0.2",
+    "nx": "^17.2.8",
+    "only-allow": "^1.2.1",
+    "prettier": "^2.8.8",
+    "pretty-quick": "^3.1.3",
+    "rollup": "^4.9.3",
+    "semver": "^7.5.4",
+    "standard-version": "^9.5.0",
+    "tslib": "^2.6.2",
+    "tsm": "^2.3.0",
+    "uvu": "^0.5.6"
+  },
+  "packageManager": "pnpm@8.6.12",
+  "engines": {
+    "node": ">=18",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm",
+    "pnpm": ">=8.6.12"
+  },
+  "author": "Leifer Mendez <leifer.contacto@gmail.com>"
 }
