--- a/packages/provider-twilio/package.json
+++ b/packages/provider-twilio/package.json
@@ -17,7 +17,8 @@
     },
     "scripts": {
         "build": "rimraf dist && rollup --config",
-        "test": " npx uvu -r tsm ./__tests__"
+        "test": " npx uvu -r tsm ./__tests__",
+        "test:coverage": "npx c8 npm run test"
     },
     "directories": {
         "lib": "dist",
@@ -27,7 +28,7 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "devDependencies": {
-        "@bot-whatsapp/bot": "^0.1.1-alpha.1+11f7eab",
+        "@bot-whatsapp/bot": "workspace:*",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -51,6 +52,5 @@
         "fluent-ffmpeg": "^2.1.2",
         "mime-types": "^2.1.35",
         "polka": "^0.5.2"
-    },
-    "gitHead": "11f7eab33e9d1a5eaf8bf566e89a41d90ccee1a8"
+    }
 }
