--- a/packages/provider-wppconnect/package.json
+++ b/packages/provider-wppconnect/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "build": "rimraf dist && rollup --config",
         "test": "npx uvu -r tsm ./__tests__",
-        "test:coverage": "npx c8  npm run test"
+        "test:coverage": "npx c8 npm run test"
     },
     "files": [
         "dist"
@@ -31,12 +31,13 @@
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@types/mime-types": "^2.1.4",
         "@types/node": "^20.11.5",
+        "@types/proxyquire": "^1.3.31",
         "@types/qr-image": "^3.2.9",
         "@types/sinon": "^17.0.3",
-        "@types/proxyquire": "^1.3.31",
         "mime-types": "^2.1.35",
         "pino": "^8.17.2",
         "proxyquire": "^2.1.3",
+        "puppeteer-core": "^21.9.0",
         "qr-image": "^3.2.0",
         "rimraf": "^5.0.5",
         "rollup-plugin-typescript2": "^0.36.0",
