--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "format:write": "prettier --write ./packages",
     "fmt.staged": "pretty-quick --staged",
     "lint:check": "eslint .",
-    "test:coverage": "lerna run test:coverage",
+    "test:coverage": "npx lerna run test:coverage",
     "lint:fix": "eslint --fix ./packages",
     "build:portal-web": "cd ./packages/portal/ && pnpm run build.types && pnpm run build.client && pnpm run build.server && pnpm run lint --fix",
     "build:full": "pnpm run build:portal-web && pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run eslint-plugin:rollup && pnpm run portal:rollup",
@@ -29,7 +29,7 @@
     "test.unit": "node ./node_modules/uvu/bin.js packages test -i bot-ts -i bot -i cli -i create-bot-whatsapp -i provider-twilio -i provider -i contexts -i database -i database-mongo -i database-mysql -i database-ts -i database-json -i database-postgres",
     "test.e2e": "node ./node_modules/uvu/bin.js __test__ ",
     "test.coverage": "npx c8 npm run test.unit",
-    "test": "npm run test.coverage",
+    "test": "npx lerna run test",
     "cli": "node ./packages/cli/bin/cli.cjs",
     "create": "node ./packages/create-bot-whatsapp/bin/create.js",
     "dev:debug": "node --inspect ./example-app/app.js",
