--- a/packages/contexts-dialogflow/package.json
+++ b/packages/contexts-dialogflow/package.json
@@ -40,8 +40,9 @@
         "@types/proxyquire": "^1.3.31",
         "@types/sinon": "^17.0.3",
         "proxyquire": "^2.1.3",
+        "rimraf": "^3.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
-        "sinon": "^17.0.1",
-        "rimraf": "^3.0.2"
-    }
+        "sinon": "^17.0.1"
+    },
+    "gitHead": "cb94c90c05492a02dda63a8f48e661bf2995d4fb"
 }
