--- a/packages/provider-baileys/package.json
+++ b/packages/provider-baileys/package.json
@@ -29,7 +29,7 @@
     },
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
     "devDependencies": {
-        "@bot-whatsapp/bot": "workspace:*",
+        "@bot-whatsapp/bot": "0.1.1-alpha.1+11f7eab",
         "@hapi/boom": "^10.0.1",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
@@ -49,5 +49,6 @@
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@whiskeysockets/baileys": "^6.6.0",
         "fluent-ffmpeg": "^2.1.2"
-    }
+    },
+    "gitHead": "cb94c90c05492a02dda63a8f48e661bf2995d4fb"
 }
