--- a/packages/provider-meta/package.json
+++ b/packages/provider-meta/package.json
@@ -38,7 +38,7 @@
         "queue-promise": "^2.2.1"
     },
     "devDependencies": {
-        "@bot-whatsapp/bot": "workspace:*",
+        "@bot-whatsapp/bot": "0.1.1-alpha.1+11f7eab",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
@@ -54,5 +54,6 @@
         "supertest": "^6.3.4",
         "tslib": "^2.6.2",
         "tsm": "^2.3.0"
-    }
+    },
+    "gitHead": "cb94c90c05492a02dda63a8f48e661bf2995d4fb"
 }
