--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -21,9 +21,9 @@
         "test": "__tests__"
     },
     "dependencies": {
-        "@bot-whatsapp/bot": "workspace:*",
-        "@bot-whatsapp/provider-baileys": "workspace:*",
-        "@bot-whatsapp/provider-twilio": "workspace:*"
+        "@bot-whatsapp/bot": "0.1.1-alpha.1+11f7eab",
+        "@bot-whatsapp/provider-baileys": "0.1.0-alpha.18",
+        "@bot-whatsapp/provider-twilio": "0.1.1-alpha.1+11f7eab"
     },
     "exports": {
         ".": {
@@ -73,5 +73,5 @@
         "rollup-plugin-typescript2": "^0.36.0",
         "sinon": "^17.0.1"
     },
-    "gitHead": "11f7eab33e9d1a5eaf8bf566e89a41d90ccee1a8"
+    "gitHead": "cb94c90c05492a02dda63a8f48e661bf2995d4fb"
 }
