--- a/packages/create-bot-whatsapp/package.json
+++ b/packages/create-bot-whatsapp/package.json
@@ -1,6 +1,6 @@
 {
     "name": "create-bot-whatsapp",
-    "version": "0.1.1-alpha.1+11f7eab",
+    "version": "0.1.2-alpha.0",
     "description": "",
     "license": "ISC",
     "main": "dist/index.cjs",
@@ -16,7 +16,7 @@
     ],
     "bin": "./bin/create.cjs",
     "dependencies": {
-        "@bot-whatsapp/cli": "^0.1.1-alpha.1+11f7eab"
+        "@bot-whatsapp/cli": "^0.1.2-alpha.0"
     },
     "repository": {
         "type": "git",
