--- a/packages/database-postgres/package.json
+++ b/packages/database-postgres/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/database-postgres",
-    "version": "0.1.1-alpha.1+11f7eab",
+    "version": "0.1.2-alpha.0",
     "description": "> TODO: description",
     "author": "vicente1992 <vic_ortiz20@hotmail.es>",
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
