--- a/packages/provider-twilio/package.json
+++ b/packages/provider-twilio/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/provider-twilio",
-    "version": "0.1.1-alpha.1+11f7eab",
+    "version": "0.1.2-alpha.0",
     "description": "> TODO: description",
     "author": "Leifer Mendez <leifer33@gmail.com>",
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
@@ -28,7 +28,7 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "devDependencies": {
-        "@bot-whatsapp/bot": "0.1.1-alpha.1+11f7eab",
+        "@bot-whatsapp/bot": "^0.1.2-alpha.0",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
