--- a/packages/contexts-dialogflow-cx/package.json
+++ b/packages/contexts-dialogflow-cx/package.json
@@ -29,7 +29,7 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "dependencies": {
-        "@bot-whatsapp/bot": "*",
+        "@bot-whatsapp/bot": "workspace:*",
         "@google-cloud/dialogflow-cx": "^4.3.1"
     },
     "devDependencies": {
