--- a/packages/provider-baileys/package.json
+++ b/packages/provider-baileys/package.json
@@ -29,7 +29,7 @@
     },
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
     "devDependencies": {
-        "@bot-whatsapp/bot": "^0.1.3-alpha.0",
+        "@bot-whatsapp/bot": "workspace:*",
         "@hapi/boom": "^10.0.1",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
