--- a/packages/provider-meta/package.json
+++ b/packages/provider-meta/package.json
@@ -38,7 +38,7 @@
         "queue-promise": "^2.2.1"
     },
     "devDependencies": {
-        "@bot-whatsapp/bot": "^0.1.3-alpha.0",
+        "@bot-whatsapp/bot": "workspace:*",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
