--- a/packages/provider-twilio/package.json
+++ b/packages/provider-twilio/package.json
@@ -28,7 +28,7 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "devDependencies": {
-        "@bot-whatsapp/bot": "^0.1.3-alpha.0",
+        "@bot-whatsapp/bot": "workspace:*",
         "@rollup/plugin-commonjs": "^23.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
