--- a/packages/provider-venom/package.json
+++ b/packages/provider-venom/package.json
@@ -29,7 +29,7 @@
     },
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
     "devDependencies": {
-        "@bot-whatsapp/bot": "^0.1.3-alpha.0",
+        "@bot-whatsapp/bot": "workspace:*",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
