--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -21,9 +21,9 @@
         "test": "__tests__"
     },
     "dependencies": {
-        "@bot-whatsapp/bot": "^0.1.3-alpha.0",
-        "@bot-whatsapp/provider-baileys": "^0.1.3-alpha.0",
-        "@bot-whatsapp/provider-twilio": "^0.1.3-alpha.0"
+        "@bot-whatsapp/bot": "workspace:*",
+        "@bot-whatsapp/provider-baileys": "workspace:*",
+        "@bot-whatsapp/provider-twilio": "workspace:*"
     },
     "exports": {
         ".": {
